# graph-memory-mcp

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  __init__.py  docker-compose.yml  env.example  pyproject.toml
docs/: __index.md  background_jobs.md  comparison.md  features.md  memory_faq.md  memory_policies_for_LLM.md  roadmap.md
examples/: README.md  embedded_python_usage.py  http_client_usage.py  mcp_servers_config.json  run_server.py
graph_memory_mcp/: __init__.py  base_server.py  cli.py  config.py  server.py  server_simple.py
graph_memory_mcp/explorer/: __init__.py  app.py  cli.py  mcp_client.py
graph_memory_mcp/explorer/static/: explorer.css  explorer.js  index.html
graph_memory_mcp/graph_memory/: __init__.py  cache.py  database.py  embedding_service.py  mcp_handlers_admin.py  mcp_handlers_graph.py  mcp_handlers_nodes.py  mcp_handlers_relations.py  mcp_handlers_search.py  owner_scoped_search.py  relation_policy.py  utils.py
graph_memory_mcp/jobs/: README.md  __init__.py  archive_old_facts.py  deduplicate_facts.py  lock.py  retry.py  scheduler.py
scripts/: falkordb-up.sh  test.sh
tests/: conftest.py  test.py  test_background_jobs.py  test_cache.py  test_edge_cases.py  test_explorer.py  test_graph_memory_server.py  test_relation_policy.py
